<resources>

    <string name="app_name">DanmakuRenderEngineDemo</string>

    <string-array name="danmaku_text_contents">
        <item>awsl</item>
        <item>厉害了</item>
        <item>爷青回</item>
        <item>23333</item>
        <item>有内味了</item>
        <item>666666666</item>
        <item>前方高能预警</item>
        <item>请收下我的膝盖</item>
        <item>地主家的傻儿子</item>
        <item>官方吐槽最为致命</item>
        <item>当然是选择原谅他</item>
        <item>如果真爱有颜色那么一定是蓝色</item>
        <item>我从未见过有如此厚颜无耻之人!</item>
    </string-array>

    <string name="main_title_quick_start">Quick StartUp</string>
    <string name="main_title_basic_features">Basic Features</string>
    <string name="main_item_simplest_demo">A Simplest Demo</string>
    <string name="main_item_timeline_sync">Timeline Synchronization</string>
    <string name="main_item_build_in_layers">Build-in Layers</string>
    <string name="main_item_style_configuration">Style Configuration</string>
    <string name="main_title_advanced_features">Advanced Features</string>
    <string name="main_item_custom_danmaku_item">Custom Advanced Danmaku</string>
    <string name="main_item_custom_layer">Custom Layer</string>
    <string name="main_item_command_and_event">Command and Event</string>
    <string name="main_item_danmaku_mask">Smart Mask Danmaku</string>

    <string name="btn_add_scroll_item">Add a Scroll Danmaku</string>
    <string name="btn_add_top_item">Add a TopCenter Danmaku</string>
    <string name="btn_add_bottom_item">Add a BottomCenter Danmaku</string>
    <string name="btn_add_common_danmaku">Add a Common Danmaku</string>
    <string name="btn_add_danmaku_with_digg">Add a Danmaku with a Digg Number</string>
    <string name="btn_add_danmaku_with_self_digg">Add a Danmaku digg-ed by yourself</string>
    <string name="btn_add_danmaku_to_custom_layer_1">Add a Danmaku to Rotate Layer</string>
    <string name="btn_add_danmaku_to_custom_layer_2">Add a Danmaku to Meteor Layer</string>

    <string name="tips_mask_demo">Mask SVG for Demonstration</string>

</resources>