<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.bytedance.danmaku.render.engine.demo.demo.SimplestDemoActivity">

    <com.bytedance.danmaku.render.engine.demo.view.RatioRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:ratioHeightByWidth="0.5625" >

        <com.bytedance.danmaku.render.engine.demo.view.CustomVideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.bytedance.danmaku.render.engine.DanmakuView
            android:id="@+id/danmaku_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.bytedance.danmaku.render.engine.demo.view.RatioRelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <com.bytedance.danmaku.render.engine.demo.view.RadioButtonGroupView
                android:id="@+id/config_bounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.bytedance.danmaku.render.engine.demo.view.RadioButtonGroupView
                android:id="@+id/config_profiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/add_common_danmaku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:typeface="normal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/btn_add_common_danmaku"
                android:background="@drawable/bg_button_selector"/>

            <Button
                android:id="@+id/add_danmaku_with_digg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:typeface="normal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/btn_add_danmaku_with_digg"
                android:background="@drawable/bg_button_selector"/>

            <Button
                android:id="@+id/add_danmaku_with_self_digg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:typeface="normal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/btn_add_danmaku_with_self_digg"
                android:background="@drawable/bg_button_selector"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</LinearLayout>